src/styles/Home.module.css
.container {
    z-index: 950;
    padding: 10px;
    height: 100vh;
    display: flex;
    flex-direction: column;
    position: sticky;
    top: 0px;
}

.header {
    display: flex;
    flex-direction: column;
}

.title {
    color: var(--tertiary);
    letter-spacing: 4px;
    font-size: min(6vw, 50px);
    font-weight: bold;
    margin: 5px;
}

.nav {
    width: 100%;
    height: 50vh;
    display: inline grid;
    align-content: center;
    justify-content: center;
    list-style: none;
    margin-block: 0;
    padding: 0;
    overflow: hidden;
}

.nav li {
    transition: 0.3s;
    font-size: 25px;
    width: 175px;
    display: block;
    text-decoration: none;
    color: var(--tertiary);
    border-radius: 15px;
    padding: 10px;
    margin-block: 10px;
}

.nav li:hover {
    background-color: var(--secondary);
    cursor: pointer;
}

@media screen and (max-width: 650px) {
    .container {
        height: auto;
        background-color: var(--primary);
        position: static;
    }

    .nav {
        align-self: center;
        height: auto;
        display: flex;
    }

    .nav li {
        font-size: large;
        padding: 5px;
        margin-inline: 5px;
        width: auto;
        border-radius: 10px;
    }
}

